--- a/src/AGISwarm/text2image_ms/app/styles.css
+++ b/src/AGISwarm/text2image_ms/app/styles.css
@@ -1,127 +1,225 @@
-body, html {
+body,
+html {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    margin: 20px;
     background-color: #121212;
     color: #ffffff;
+    overflow-x: hidden;
+    height: 90vh;
+}
+
+
+#prompt,
+#negative_prompt {
+    margin: 0;
 }
 
 .container {
     display: flex;
     max-width: 100vw;
-    height: 100vh;
-    padding: 20px;
+    height: 100%;
 }
 
-.generation-container {
+.chat-container {
+    margin-right: auto;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     margin-right: 20px;
     max-width: 70%;
+    width: 70%;
+}
+
+@media (max-width: 991px) {
+    .chat-container {
+        max-width: 100%;
+    }
 }
 
 .config-container {
     background-color: #1e1e1e;
     padding: 20px;
     border-radius: 5px;
-    width: 30%;
+    margin-left: auto;
+    width: 30vw;
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .form-group label {
     display: block;
     margin-bottom: 5px;
+    font-size: 2vh;
 }
 
 .form-control {
     width: 100%;
-    padding: 8px;
+    padding: 5px;
+    font-size: 2vh;
     background-color: #2d2d2d;
     color: #ffffff;
     border: none;
-    border-radius: 4px;
 }
 
 .btn {
-    padding: 8px 15px;
+    padding: 5px 10px;
+    font-size: 2vh;
 }
 
-.image-output {
+.chat-output {
+    padding: 0;
+    padding-left: 1%;
+    padding-right: 1%;
+    height: 60vh;
     flex-grow: 1;
+    overflow-y: auto;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
     background-color: #1e1e1e;
     border-radius: 5px;
-    margin-bottom: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
 }
 
-.image-output img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+.message {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    display: inline-block;
+    /* max-width: 96%; */
+    white-space: pre-wrap;
+    /* Preserve whitespace and wrap as needed */
+    word-wrap: break-word;
+    color: #ffffff;
+    background-color: #333;
+    /* Ensure messages have a background color */
+}
+
+.message_container {
+    width: 100%;
+}
+
+.prompt-message,
+.negative-prompt-message {
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-end;
+    margin-left: auto;
+    background-color: #2d2d2d;
+    text-align: right;
+    font-size: 1.7vh;
+}
+
+
+.negative-prompt-message {
+    background-color: #570b0b;
+    font-size: 1.7vh;   
+}
+
+.bot-message {
+    align-self: flex-start;
+    background-color: #a89d9d;
+    color: #000000;
+    text-align: left;
+    margin-right: auto;
+    font-size: 1.7vh;
 }
 
 .input-container {
     display: flex;
-    margin-bottom: 15px;
-}
-
-.input-container .form-control {
     flex-grow: 1;
-    margin-right: 10px;
+    align-items: center;
+    margin-bottom: 0.1vh;
+    font-size: 2vh;
+    height: 1vh;
 }
 
-#send-btn {
+.input-container>.form-control {
+    background-color: #2d2d2d;
+    height: 7vh;
+    overflow-y: auto;
+    flex-grow: 1;
+    color: #ffffff;
+    border: none;
+}
+
+.input-container>#send-btn {
+    margin-left: 0.5vh;
+    height: 7vh;
     background-color: #363d46;
     border-color: #363d46;
 }
 
-.generation-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 15px;
+.btn-secondary {
+    background-color: #363d46;
+    border-color: #363d46;
 }
 
-#title {
-    font-size: 24px;
-    margin: 0;
+output {
+    color: #ffffff;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #1e1e1e;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #363d46;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+@media (max-width: 991px) {
+    .config-container {
+        position: fixed;
+        top: 0;
+        right: -60vw;
+        width: 60vw;
+        height: 100%;
+        overflow-y: auto;
+        transition: right 0.3s ease-in-out;
+        z-index: 1000;
+        background-color: #1e1e1e;
+        font-size: 2vh;
+    }
+
+    .config-container.show {
+        right: 0;
+    }
 }
 
 .menu-toggle {
     display: none;
+    margin-left: 1%;
+    height: 5vh;
+    width: 5vh;
+    font-size: 3vh;
 }
 
 @media (max-width: 991px) {
-    .container {
-        flex-direction: column;
-    }
-
-    .generation-container {
-        max-width: 100%;
-        margin-right: 0;
-        margin-bottom: 20px;
-    }
-
-    .config-container {
-        width: 100%;
-    }
-
     .menu-toggle {
         display: block;
+        margin-bottom: 20px;
     }
+}
 
-    .config-container {
-        display: none;
-    }
+.chat-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    font-size: 2vh;
+}
 
-    .config-container.show {
-        display: block;
-    }
+#title {
+    font-size: 3vh;
 }
